--- a/asciidoc/formats.asciidoc
+++ b/asciidoc/formats.asciidoc
@@ -6,7 +6,7 @@ Source Hightlight Filter Test
 Details of the filter can be found in
 `./doc/source-highlight-filter.txt`.
 
-[source,python]
+```python
 ---------------------------------------------------------------------
 ''' A multi-line
     comment.'''
@@ -18,6 +18,7 @@ def sub_word(mo):
     else:
         return word
 ---------------------------------------------------------------------
+```
 
 
 
